# modern-cpp-bazel-starter

./: .bazelrc  .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.org
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
apps/: CMakeLists.txt
apps/intro/: CMakeLists.txt
apps/intro/src/: main.cpp
cmake/: CPM.cmake  CodeCoverage.cmake  Colors.cmake  ConfigSafeGuards.cmake  Documentation.cmake  LTO.cmake  Misc.cmake  Warnings.cmake  tools.cmake
libs/: CMakeLists.txt
libs/greeter/: CMakeLists.txt  README.md
libs/greeter/docs/: CMakeLists.txt  conf.py
libs/greeter/include/greeter/: greeter.h
libs/greeter/src/: greeter.cpp
libs/greeter/tests/: CMakeLists.txt  greeter.cpp
